heading spacing fixes

--- a/_sass/_jn-styles.scss
+++ b/_sass/_jn-styles.scss
@@ -7,13 +7,20 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h2 {
-	font-size: 21px;
+	font-size: 24px;
 }
 
 h2 {
 	margin-bottom: 8px;
-	margin-top: 16px;
+	margin-top: 50px;
 }
+
+h3 {
+	margin-top: 40px;
+	font-size: 21px;
+}
+
+
 ul {
 	margin-bottom: 2em;
 }
@@ -173,3 +180,4 @@ figcaption {
 .paddingtop30 {
 	padding-top: 30px;
 }
+
