--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -185,7 +185,7 @@
     padding-bottom: 5px;
     border-top: 1px solid #eee;
 
-    h2 {
+    h3 {
         margin-top: 0;
     }
 }
