--- a/_sass/_margin-padding.scss
+++ b/_sass/_margin-padding.scss
@@ -1,3 +1,7 @@
+.margin-top-0 {
+	margin-top: 0;
+}
+
 .margin-right-10 {
 	margin-right: 10px;
 }
